tests/error/linear_errors/unused_field1.py
import guppylang.std.quantum as quantum
from guppylang.decorator import guppy
from guppylang.module import GuppyModule
from guppylang.std.builtins import owned
from guppylang.std.quantum import qubit


module = GuppyModule("test")
module.load_all(quantum)


@guppy.struct(module)
class MyStruct:
    q: qubit
    x: int


@guppy(module)
def foo(s: MyStruct @owned) -> int:
    return s.x


module.compile()
