tests/error/linear_errors/unused_field1.err
Error: Drop violation (at $FILE:19:8)
   | 
17 | 
18 | @guppy(module)
19 | def foo(s: MyStruct @owned) -> int:
   |         ^^^^^^^^^^^^^^^^^^ Field `s.q` with non-droppable type `qubit` is leaked

Help: Make sure that `s.q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
